syntax = "proto3";

option csharp_namespace = "GrpcGreeter.greet";

package greet;

//import "google/protobuf/duration.proto";  
//import "google/protobuf/wrappers.proto";
import "customTypess.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Test(TestInput) returns(TestOutput);
  rpc Check(RpcCheckInput) returns(RpcCheckOutput);
}

message RpcCheckOutput{
	string res = 1;
}

message RpcCheckInput{

}

message TestOutput{
	int32 code = 1;
}

message TestInput{

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  customTypes.DecimalValue Value = 2;
}